[package]
name = "like-scrape"
version = "0.1.0"
authors = ["Bryan Henry <bryanhenry522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
tokio = { version = "0.2.21", features = ["macros", "rt-core", "rt-threaded"]}
egg-mode = "0.15.0"
dotenv = "0.15.0"
structopt = "0.3.15"
serde = "1.0.114"
serde_json = "1.0.56"
