[package]
name = "like-scrape"
version = "0.1.0"
authors = ["Bryan Henry <bryanhenry522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
tokio = { version = "0.2.21", features = ["macros", "rt-core", "rt-threaded"]}
egg-mode = "0.15.0"
dotenv = "0.15.0"
structopt = "0.3.15"
serde = "1.0.114"
serde_json = "1.0.56"
diesel = { version = "1.4.5", features = ["sqlite"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }

# Use patched diesel 1.4.5 with fix for lifetime on boxed Migration
# TODO: Undo this once there's a new release with my pull request (https://github.com/diesel-rs/diesel/pull/2458)
[replace]
"diesel:1.4.5" = { git = "https://github.com/sbrocket/diesel", branch = "1.4.x" }

[build-dependencies]
anyhow = "1.0.31"
assert_matches = "1.3.0"
